--- a/.github/workflows/codeguru-reviewer.yml
+++ b/.github/workflows/codeguru-reviewer.yml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   review:
+    runs-on: ubuntu-latest
     steps:
 
     # Step 1: Checkout the repository and provide your AWS credentials
