--- a/.github/workflows/codeguru-reviewer.yml
+++ b/.github/workflows/codeguru-reviewer.yml
@@ -11,7 +11,7 @@ env:
 # permission can be added at job level or workflow level
 permissions:
   id-token: write
-  contents: read    # This is required for actions/checkout
+  contents: write    # This is required for actions/checkout
 
 jobs:
   review:
