--- a/.github/workflows/codeguru-reviewer.yml
+++ b/.github/workflows/codeguru-reviewer.yml
@@ -10,8 +10,9 @@ env:
 
 # permission can be added at job level or workflow level
 permissions:
+  security-events: write
   id-token: write
-  contents: write    # This is required for actions/checkout
+  contents: read    # This is required for actions/checkout
 
 jobs:
   review:
